--- a/swift-rindoku-sample/RepositoryCell.xib
+++ b/swift-rindoku-sample/RepositoryCell.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,50 +16,26 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RepositoryCell" customModule="swift_rindoku_sample" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Zo5-bq-rQA">
-                        <rect key="frame" x="20" y="0.0" width="280" height="44.5"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83S-Am-zbT">
-                                <rect key="frame" x="0.0" y="12" width="228" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ne-kg-e2m">
-                                <rect key="frame" x="236" y="0.0" width="44" height="44.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="2ne-kg-e2m" secondAttribute="height" multiplier="1:1" id="bx5-Sh-Kpb"/>
-                                </constraints>
-                                <state key="normal" image="bookmark_border"/>
-                                <connections>
-                                    <action selector="bookmarkButtonDidTap" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Op9-nr-pVg"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="44" id="ibl-uD-dMe"/>
-                        </constraints>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ay1-aO-yTP">
+                        <rect key="frame" x="16" y="11" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="Zo5-bq-rQA" secondAttribute="bottom" id="2R9-Ou-u5v"/>
-                    <constraint firstItem="Zo5-bq-rQA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="EFx-Ob-pi3"/>
-                    <constraint firstAttribute="trailing" secondItem="Zo5-bq-rQA" secondAttribute="trailing" constant="20" symbolic="YES" id="FO0-Ej-hrB"/>
-                    <constraint firstItem="Zo5-bq-rQA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="vN0-HL-Od8"/>
+                    <constraint firstItem="ay1-aO-yTP" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="6fA-fc-V7y"/>
+                    <constraint firstItem="ay1-aO-yTP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="pTw-ut-RcU"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="bookmarkButton" destination="2ne-kg-e2m" id="uqk-uw-qnB"/>
-                <outlet property="repositoryNameLabel" destination="83S-Am-zbT" id="Ko3-dn-pFJ"/>
+                <outlet property="label" destination="ay1-aO-yTP" id="MAv-qB-ehM"/>
             </connections>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="bookmark_border" width="48" height="48"/>
-    </resources>
 </document>
